--- a/Exercise-2.ipynb
+++ b/Exercise-2.ipynb
@@ -161,14 +161,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a13774d-d188-48a7-b2f1-aa9c7e7e7fae",
+   "metadata": {},
+   "source": [
+    "![Xiatian](Xiatian.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7a63e5d9-8aa9-45cb-a35b-c4503e94c9f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Jiechao Zhu\\\\Geo-Python\\\\exercise-1-JZhu-01'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c36ebfa4-bb61-4e16-bfc6-6bd8c9b2e138",
+   "id": "8facef26-0e33-4b68-893e-ecc8eaced75e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "My favorite animal"
-   ]
+   "source": []
   }
  ],
  "metadata": {
