--- a/Exercise-1.ipynb
+++ b/Exercise-1.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#right"
+    "<Font Color=LightSeaGreen>#Markdown Practice"
    ]
   },
   {
@@ -109,8 +109,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#End"
+    "<Font Color='LightSeaGreen'>First exercise finished!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
