--- a/Exercise-2.ipynb
+++ b/Exercise-2.ipynb
@@ -1,13 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7fcb8896-dce7-435f-986b-46a7cea828da",
+   "metadata": {},
+   "source": [
+    "<Font size=5, Font Color=LightSeaGreen>#Problem 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "9db3cbec-8af8-441b-93a9-51f355cf9a3f",
+   "execution_count": null,
+   "id": "08a96fa5-be33-4941-8700-1f23f6493be2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Problem 1\n",
     "station_names=['lighthouse','Harmaja','Suomenlinna aaltopoiju','Kumpula','Kaisaniemi']\n",
     "station_start_years=[2003,1989,2016,2005,1844]\n",
     "station_names.extend(['Malmi airfield','Vuosaari harbour','Kaivopuisto'])\n",
@@ -64,13 +71,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "496f10c3-f429-43ba-8be6-1bd8d45c7386",
+   "metadata": {},
+   "source": [
+    "<Font size=5, Font Color=LightSeaGreen>#Problem 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 113,
-   "id": "7b073752-f506-42e7-96c7-0f925751bfde",
+   "execution_count": null,
+   "id": "cbebca27-7e8e-4516-ba57-a5333bde895a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Problem 2\n",
     "import calendar\n",
     "months=calendar.month_name[1:12]"
    ]
@@ -153,11 +167,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dfaf672-1c7d-4cfe-be5d-e3582849490d",
+   "id": "6632fae5-9f0e-417f-91b0-0c7a8b910ae8",
    "metadata": {},
    "source": [
-    "#Problem 3\n",
-    "Python is fun!"
+    "<Font size=5, Font Color=LightSeaGreen>#Problem 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2860d33a-41fb-44f4-930b-69a13a44942c",
+   "metadata": {},
+   "source": [
+    "<Font size=3, Font Color=LightSeaGreen>This is my pet, his name is Xiatian."
    ]
   },
   {
@@ -167,35 +188,6 @@
    "source": [
     "![Xiatian](Xiatian.jpg)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "7a63e5d9-8aa9-45cb-a35b-c4503e94c9f9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\Jiechao Zhu\\\\Geo-Python\\\\exercise-1-JZhu-01'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8facef26-0e33-4b68-893e-ecc8eaced75e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
