--- a/Exercise-3.ipynb
+++ b/Exercise-3.ipynb
@@ -426,6 +426,7 @@
     }
    ],
    "source": [
+    "# Solution 1\n",
     "line = '-'\n",
     "flag = ''\n",
     "for i in range(24):\n",
@@ -441,6 +442,48 @@
     "    flag = flag + '\\n'\n",
     "print(flag)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6f4b9cfb-2d0f-450a-9ba8-5fbdb74661cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*******------------\n",
+      "*******------------\n",
+      "*******------------\n",
+      "-------------------\n",
+      "-------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Solution 2\n",
+    "star = '*'\n",
+    "line = '-'\n",
+    "flag = ''\n",
+    "for i in range(5):\n",
+    "    for j in range(19):\n",
+    "        if (i < 3) and (j < 7):\n",
+    "            flag = flag + star\n",
+    "        else:\n",
+    "            flag = flag + line\n",
+    "    flag = flag + '\\n'\n",
+    "print(flag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b684beea-d761-43ca-bfc4-1c2ffc4d99b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
